study page collapse fix

--- a/src/app/pages/user/user-study-course/user-study-course.component.html
+++ b/src/app/pages/user/user-study-course/user-study-course.component.html
@@ -7,7 +7,7 @@
     <i class="uil uil-angle-right collapse_menu--icon "></i>
     <span class="collapse_menu--label"></span>
 </label> -->
-<button id="collapse_menu" class="collapse_menu chapterListToggle">
+<button (click)="collapse()" id="collapse_menu" class="collapse_menu chapterListToggle">
     <i class="uil uil-angle-right collapse_menu--icon "></i>
     <span class="collapse_menu--label"></span>
 </button>
