update 	*for testing issues* 	adding comments to issues file and fix issues from my side
	*all updates below are not testing issues *
	-improve edit course UX and check if promo and cover was null from the API res, (always null)
	-improve study page UX by adding loading indicator while loading video from Vimeo
	-protect study page and close it immediately if the API returns an empty array of chapters or course not found

--- a/src/app/pages/instructor/edit-course/edit-course.component.html
+++ b/src/app/pages/instructor/edit-course/edit-course.component.html
@@ -34,7 +34,7 @@
         <div class="step-content">
             <mat-step [stepControl]="infoForm">
 
-                <ng-template matStepLabel>{{'General Information' | translate}}</ng-template>
+                <ng-template matStepLabel>{{'General Information' | translate}} </ng-template>
                 <form [formGroup]="infoForm">
                     <div class="step-tab-panel step-tab-info active" id="tab_step1">
                         <div class="tab-from-content">
@@ -175,7 +175,7 @@
                                                         </div> -->
                                                     <div *ngIf="selectedVideoPrev" class="view__img">
                                                         <video class="view__img" controls>
-                                                            <source src="{{selectedVideoPrev}}">
+                                                            <source src="{{selectedVideoPrev || 'temp'}}">
                                                             {{"Your browser does not support the video tag." | translate}}
                                                         </video>
                                                     </div>
