--- a/src/app/pages/admin/admin-students-all-courses/admin-students-all-courses.component.html
+++ b/src/app/pages/admin/admin-students-all-courses/admin-students-all-courses.component.html
@@ -88,6 +88,7 @@
                             </tr> -->
                         </tbody>
                     </table>
+                    <p *ngIf="!enrollmentStudentsArray.length && !loading">{{"No result found" | translate}}</p>
                     <div *ngIf="loading" class="col-md-12">
                         <div class="main-loader mt-20">
                             <div class="spinner">
