--- a/src/app/pages/instructor/instructor-dashboard/instructor-dashboard.component.html
+++ b/src/app/pages/instructor/instructor-dashboard/instructor-dashboard.component.html
@@ -10,8 +10,8 @@
 						<div class="card_dash">
 							<div class="card_dash_left">
 								<h5>{{"Total Courses" | translate}}</h5>
-								<h2>130</h2>
-								<span class="crdbg_3">{{"New" | translate}} 5</span>
+								<h2>{{dashboard.total_active_courses + dashboard.total_pending_courses}}</h2>
+								<!-- <span class="crdbg_3">{{"New" | translate}} 5</span> -->
 							</div>
 							<div class="card_dash_right">
 								<img src="assets/images/dashboard/online-course.svg" alt="">
@@ -22,8 +22,8 @@
 						<div class="card_dash">
 							<div class="card_dash_left">
 								<h5>{{"Total Sales" | translate}}</h5>
-								<h2>$350</h2>
-								<span class="crdbg_1">{{"New" | translate}} 50</span>
+								<h2>{{dashboard.total_sales}} {{"EGP" | translate}}</h2>
+								<!-- <span class="crdbg_1">{{"New" | translate}} 50</span> -->
 							</div>
 							<div class="card_dash_right">
 								<img src="assets/images/dashboard/achievement.svg" alt="">
@@ -34,8 +34,8 @@
 						<div class="card_dash">
 							<div class="card_dash_left">
 								<h5>{{"Total Students" | translate}}</h5>
-								<h2>2650</h2>
-								<span class="crdbg_4">{{"New" | translate}} 245</span>
+								<h2>{{dashboard.total_students}}</h2>
+								<!-- <span class="crdbg_4">{{"New" | translate}} 245</span> -->
 							</div>
 							<div class="card_dash_right">
 								<img src="assets/images/dashboard/knowledge.svg" alt="">
@@ -46,8 +46,8 @@
 						<div class="card_dash">
 							<div class="card_dash_left">
 								<h5>{{"Active Course" | translate}}</h5>
-								<h2>1500</h2>
-								<span class="crdbg_2">New 125</span>
+								<h2>{{dashboard.total_active_courses}}</h2>
+								<!-- <span class="crdbg_2">New 125</span> -->
 							</div>
 							<div class="card_dash_right">
 								<img src="assets/images/dashboard/active-course.svg" alt="">
@@ -58,8 +58,8 @@
 						<div class="card_dash">
 							<div class="card_dash_left">
 								<h5>{{"Pending Course" | translate}}</h5>
-								<h2>500</h2>
-								<span class="crdbg_2">{{"New" | translate}} 125</span>
+								<h2>{{dashboard.total_pending_courses}}</h2>
+								<!-- <span class="crdbg_2">{{"New" | translate}} 125</span> -->
 							</div>
 							<div class="card_dash_right">
 								<img src="assets/images/dashboard/pending.svg" alt="">
