--- a/src/app/pages/user/user-dashboard/user-dashboard.component.html
+++ b/src/app/pages/user/user-dashboard/user-dashboard.component.html
@@ -1,14 +1,14 @@
 <div class="sa4d25">
-    <div class="container-fluid">			
+    <div class="container-fluid">
         <div class="row">
-            <div class="col-lg-12">	
+            <div class="col-lg-12">
                 <h2 class="st_title"><i class="uil uil-apps"></i> {{'Student Dashboard' | translate}}</h2>
             </div>
             <div class="col-xl-6 col-lg-6 col-md-6">
                 <div class="card_dash">
                     <div class="card_dash_left">
                         <h5>{{'Active Courses' | translate }}</h5>
-                        <h2>15</h2>
+                        <h2>{{dashboard.total_active_courses}}</h2>
                     </div>
                     <div class="card_dash_right">
                         <img src="assets/images/dashboard/active-course.svg" alt="">
@@ -19,87 +19,49 @@
                 <div class="card_dash">
                     <div class="card_dash_left">
                         <h5>{{ 'Pending Courses' | translate}}</h5>
-                        <h2>45</h2>
+                        <h2>{{dashboard.total_pending_courses}}</h2>
                     </div>
                     <div class="card_dash_right">
                         <img src="assets/images/dashboard/pending.svg" alt="">
                     </div>
                 </div>
-            </div>				
+            </div>
         </div>
         <div class="section3125 mt-30">
-					
+
             <div class="row">
                 <div class="col-12">
                     <h4 class="item_title">{{'Newest Courses' | translate}}</h4>
-                    <a  class="see150">{{'See all' | translate}}</a>
+                    <a [routerLink]="['/user/courses']" routerLinkActive="router-link-active"  class="see150">{{'See all' | translate}}</a>
                 </div>
-                <div class="col-12 col-md-6 col-lg-4 col-xl-3">
+                <div *ngFor="let course of approvedCoursesArray" class="col-12 col-md-6 col-lg-4 col-xl-3">
                     <div class="fcrse_1 mb-20">
-                        <a  class="fcrse_img">
+                        <a [routerLink]="['/user/viewCourse/',course.id]" routerLinkActive="router-link-active"
+                            class="fcrse_img">
                             <img src="assets/images/courses/img-14.jpg" alt="">
                             <div class="course-overlay">
                                 <span class="play_btn1"><i class="uil uil-play"></i></span>
-                                <div class="crse_timer">
-                                   12 {{ 'hours' | translate}}
-                                </div>
+                                <!-- <div class="crse_timer">
+                                    12 {{ 'hours' | translate}}
+                                </div> -->
                             </div>
                         </a>
                         <div class="fcrse_content">
-                            <a  class="crse14s">Build Responsive Real World Websites with HTML5 and CSS3 </a>
-                            <a  class="crse-cate">English</a>
+                            <a class="crse14s">{{course.course_title}}
+                            </a>
+                            <a class="crse-cate" *ngIf="course.language === '1'">Arabic</a>
+                            <a class="crse-cate" *ngIf="course.language === '2'">English</a>
                             <div class="auth1lnkprce">
-                                <p class="cr1fot">{{'By' | translate}} <a >John Doe </a></p>
-                                <div class="prce142">$4 </div>
+                                <p class="cr1fot">{{ 'By' | translate}} <a>{{course.first_name}}</a></p>
+                                <!-- <div class="prce142">$4</div> -->
                             </div>
                         </div>
                     </div>
                 </div>
-                <div class="col-12 col-md-6 col-lg-4 col-xl-3">
-                    <div class="fcrse_1 mb-20">
-                        <a  class="fcrse_img">
-                            <img src="assets/images/courses/img-14.jpg" alt="">
-                            <div class="course-overlay">
-                                <span class="play_btn1"><i class="uil uil-play"></i></span>
-                                <div class="crse_timer">
-                                   12 {{ 'hours' | translate}}
-                                </div>
-                            </div>
-                        </a>
-                        <div class="fcrse_content">
-                            <a  class="crse14s">Build Responsive Real World Websites with HTML5 and CSS3 </a>
-                            <a  class="crse-cate">English</a>
-                            <div class="auth1lnkprce">
-                                <p class="cr1fot">{{'By' | translate}} <a >John Doe </a></p>
-                                <div class="prce142">$4 </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-12 col-md-6 col-lg-4 col-xl-3">
-                    <div class="fcrse_1 mb-20">
-                        <a  class="fcrse_img">
-                            <img src="assets/images/courses/img-14.jpg" alt="">
-                            <div class="course-overlay">
-                                <span class="play_btn1"><i class="uil uil-play"></i></span>
-                                <div class="crse_timer">
-                                   12 {{ 'hours' | translate}}
-                                </div>
-                            </div>
-                        </a>
-                        <div class="fcrse_content">
-                            <a  class="crse14s">Build Responsive Real World Websites with HTML5 and CSS3 </a>
-                            <a  class="crse-cate">English</a>
-                            <div class="auth1lnkprce">
-                                <p class="cr1fot">{{'By' | translate}} <a >John Doe </a></p>
-                                <div class="prce142">$4 </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+
             </div>
-            
-            <div class="row">
+
+            <!-- <div class="row">
                 <div class="col-12">
                     <h4 class="item_title">{{'Another Courses' | translate}}</h4>
                     <a  class="see150">{{'See all' | translate}}</a>
@@ -167,7 +129,7 @@
                         </div>
                     </div>
                 </div>
-            </div>
+            </div> -->
         </div>
     </div>
 </div>
