--- a/src/app/pages/instructor/instructor-dashboard/instructor-dashboard.component.html
+++ b/src/app/pages/instructor/instructor-dashboard/instructor-dashboard.component.html
@@ -10,7 +10,7 @@
 						<div class="card_dash">
 							<div class="card_dash_left">
 								<h5>{{"Total Courses" | translate}}</h5>
-								<h2>{{dashboard.total_active_courses + dashboard.total_pending_courses}}</h2>
+								<h2>{{dashboardArray.total_active_courses + dashboardArray.total_pending_courses}}</h2>
 								<!-- <span class="crdbg_3">{{"New" | translate}} 5</span> -->
 							</div>
 							<div class="card_dash_right">
@@ -22,7 +22,7 @@
 						<div class="card_dash">
 							<div class="card_dash_left">
 								<h5>{{"Total Sales" | translate}}</h5>
-								<h2>{{dashboard.total_sales}} {{"EGP" | translate}}</h2>
+								<h2>{{dashboardArray.total_sales}} {{"EGP" | translate}}</h2>
 								<!-- <span class="crdbg_1">{{"New" | translate}} 50</span> -->
 							</div>
 							<div class="card_dash_right">
@@ -34,7 +34,7 @@
 						<div class="card_dash">
 							<div class="card_dash_left">
 								<h5>{{"Total Students" | translate}}</h5>
-								<h2>{{dashboard.total_students}}</h2>
+								<h2>{{dashboardArray.total_students}}</h2>
 								<!-- <span class="crdbg_4">{{"New" | translate}} 245</span> -->
 							</div>
 							<div class="card_dash_right">
@@ -46,7 +46,7 @@
 						<div class="card_dash">
 							<div class="card_dash_left">
 								<h5>{{"Active Course" | translate}}</h5>
-								<h2>{{dashboard.total_active_courses}}</h2>
+								<h2>{{dashboardArray.total_active_courses}}</h2>
 								<!-- <span class="crdbg_2">New 125</span> -->
 							</div>
 							<div class="card_dash_right">
@@ -58,7 +58,7 @@
 						<div class="card_dash">
 							<div class="card_dash_left">
 								<h5>{{"Pending Course" | translate}}</h5>
-								<h2>{{dashboard.total_pending_courses}}</h2>
+								<h2>{{dashboardArray.total_pending_courses}}</h2>
 								<!-- <span class="crdbg_2">{{"New" | translate}} 125</span> -->
 							</div>
 							<div class="card_dash_right">
