--- a/src/app/pages/user/user-dashboard/user-dashboard.component.html
+++ b/src/app/pages/user/user-dashboard/user-dashboard.component.html
@@ -8,7 +8,7 @@
                 <div class="card_dash">
                     <div class="card_dash_left">
                         <h5>{{'Active Courses' | translate }}</h5>
-                        <h2>{{dashboard.total_active_courses}}</h2>
+                        <h2>{{dashboardArray.total_active_courses}}</h2>
                     </div>
                     <div class="card_dash_right">
                         <img src="assets/images/dashboard/active-course.svg" alt="">
@@ -19,7 +19,7 @@
                 <div class="card_dash">
                     <div class="card_dash_left">
                         <h5>{{ 'Pending Courses' | translate}}</h5>
-                        <h2>{{dashboard.total_pending_courses}}</h2>
+                        <h2>{{dashboardArray.total_pending_courses}}</h2>
                     </div>
                     <div class="card_dash_right">
                         <img src="assets/images/dashboard/pending.svg" alt="">
