--- a/src/app/pages/user/components/user-sidebar/user-sidebar.component.html
+++ b/src/app/pages/user/components/user-sidebar/user-sidebar.component.html
@@ -15,14 +15,14 @@
         <a [routerLink]="['']" routerLinkActive="router-link-active" ><img class="logo-inverse" src="assets/images/logo-inner.png" alt=""></a>
         <span>Smart Academy</span>
     </div>
-    <div class="search120">
+    <!-- <div class="search120">
         <div class="ui search">
             <div class="ui left icon input swdh10">
                 <input class="prompt srch10" type="text" placeholder="Search for Tuts Videos, Tutors, Tests and more..">
                 <i class='uil uil-search-alt icon icon1'></i>
             </div>
         </div>
-    </div>
+    </div> -->
     <div class="header_right">
         <ul>
             <li class="ui">
