--- a/src/app/pages/instructor/create-course/create-course.component.html
+++ b/src/app/pages/instructor/create-course/create-course.component.html
@@ -151,7 +151,7 @@
                                                                         formControlName="coverImage" type="file"
                                                                         class="custom-file-input" id="inputGroupFile04">
                                                                     <label class="custom-file-label"
-                                                                        for="inputGroupFile04">{{ selectedCoverImage?.name || 'No Choose file' }}</label>
+                                                                        for="inputGroupFile04">{{ selectedCoverImage?.name || 'No Choose file' | translate }}</label>
                                                                 </div>
                                                             </div>
                                                         </div>
