--- a/src/app/pages/contact-us/contact-us.component.html
+++ b/src/app/pages/contact-us/contact-us.component.html
@@ -75,14 +75,14 @@
                         <li><div class="txt_cntct"><span class="cntct_895"><i class="uil uil-envelope"></i>Email Address :</span><p>Info@smart-academy@gmail.com</p></div></li>
                         <li><div class="txt_cntct"><span class="cntct_895"><i class="uil uil-mobile-android-alt"></i>Phone Number :</span><p>+211234567890, 01010000000</p></div></li>
                     </ul>
-                    <div class="edututs_links_social">
+                    <!-- <div class="edututs_links_social">
                         <ul class="tutor_social_links">
                             <li><a href="#" class="fb"><i class="uil uil-facebook-f"></i></a></li>
                             <li><a href="#" class="tw"><i class="uil uil-twitter"></i></a></li>
                             <li><a href="#" class="ln"><i class="uil uil-linkedin"></i></a></li>
                             <li><a href="#" class="yu"><i class="uil uil-youtube"></i></a></li>
                         </ul>
-                    </div>
+                    </div> -->
                 </div>												
             </div>
         </div>
