--- a/src/app/pages/instructor/instructor-add-lecture/instructor-add-lecture.component.html
+++ b/src/app/pages/instructor/instructor-add-lecture/instructor-add-lecture.component.html
@@ -74,7 +74,7 @@
                                                     <div class="textarea_dt">
                                                         <div class="ui form swdh339">
                                                             <div class="field">
-                                                                <textarea formControlName="description" rows="5"
+                                                                <textarea maxlength="120" formControlName="description" rows="5"
                                                                     name="description" id="id_part_description"
                                                                     placeholder="Insert description"></textarea>
                                                             </div>
