--- a/src/app/pages/user/components/user-footer/user-footer.component.html
+++ b/src/app/pages/user/components/user-footer/user-footer.component.html
@@ -19,7 +19,7 @@
                                 </li>
                             </ul>
                         </div>
-                        <div class="col-md-6">
+                        <!-- <div class="col-md-6">
                             <div class="edu_social_links">
                                 <a ><i class="uil uil-facebook-f"></i></a>
                                 <a ><i class="uil uil-twitter"></i></a>
@@ -27,7 +27,7 @@
                                 <a ><i class="uil uil-instagram"></i></a>
                                 <a ><i class="uil uil-youtube"></i></a>
                             </div>
-                        </div>
+                        </div> -->
                     </div>
                 </div>
             </div>
