--- a/src/app/pages/instructor/components/footer/footer.component.html
+++ b/src/app/pages/instructor/components/footer/footer.component.html
@@ -22,7 +22,7 @@
                                     </li>
                                 </ul>
                             </div>
-                            <div class="col-md-6">
+                            <!-- <div class="col-md-6">
                                 <div class="edu_social_links">
                                     <a><i class="uil uil-facebook-f"></i></a>
                                     <a><i class="uil uil-twitter"></i></a>
@@ -30,7 +30,7 @@
                                     <a><i class="uil uil-instagram"></i></a>
                                     <a><i class="uil uil-youtube"></i></a>
                                 </div>
-                            </div>
+                            </div> -->
                         </div>
                     </div>
                 </div>
