--- a/src/app/pages/instructor/create-course/create-course.component.html
+++ b/src/app/pages/instructor/create-course/create-course.component.html
@@ -67,7 +67,7 @@
                                                         <div class="textarea_dt">
                                                             <div class="ui form swdh339">
                                                                 <div class="field">
-                                                                    <textarea formControlName="courseDescription"
+                                                                    <textarea maxlength="120" formControlName="courseDescription"
                                                                         rows="5" name="description"
                                                                         id="id_course_description"
                                                                         placeholder="Insert your course description"></textarea>
