--- a/src/app/pages/signup/signup.component.html
+++ b/src/app/pages/signup/signup.component.html
@@ -14,14 +14,20 @@
 					<h2> {{"Welcome to Smart Academy" | translate}} </h2>
 					<p>{{"Sign Up and Start Learning!" | translate}} </p>
 					<div class="alert alert-danger" role="alert" *ngIf="showErrors && registrationForm.invalid">
-						<span *ngIf="registrationForm.get('firstName').invalid"> {{"*Please enter a valid first name (ex. Hossam)" | translate}} </span><br>
-						<span *ngIf="registrationForm.get('lastName').invalid"> {{"*Please enter a valid last name (ex.  Elkashef)" | translate}} </span><br>
-						<span *ngIf="registrationForm.get('email').invalid"> {{"*Please enter a valid Email (ex. example@gmail.com" | translate}} </span><br>
-						<span *ngIf="registrationForm.get('mobile').invalid"> {{"*Please enter a valid Mobile (ex. 01xxxxxxxxx)" | translate}} </span><br>
+						<span *ngIf="registrationForm.get('firstName').invalid">
+							{{"*Please enter a valid first name (ex. Hossam)" | translate}} </span><br>
+						<span *ngIf="registrationForm.get('lastName').invalid">
+							{{"*Please enter a valid last name (ex.  Elkashef)" | translate}} </span><br>
+						<span *ngIf="registrationForm.get('email').invalid">
+							{{"*Please enter a valid Email (ex. example@gmail.com" | translate}} </span><br>
+						<span *ngIf="registrationForm.get('mobile').invalid">
+							{{"*Please enter a valid Mobile (ex. 01xxxxxxxxx)" | translate}} </span><br>
 						<!-- <p *ngIf="registrationForm.get('address').invalid"> Please enter a valid Address (minimum length = 11)</p> -->
-						<span *ngIf="registrationForm.get('password').invalid"> {{"*Please enter a valid password (minimum length = 8 characters)" | translate}} </span><br>
+						<span *ngIf="registrationForm.get('password').invalid">
+							{{"*Please enter a valid password (minimum length = 8 characters)" | translate}} </span><br>
 						<!-- <span *ngIf="registrationForm.get('city').invalid"> *Please enter a valid City</span><br> -->
-						<span *ngIf="registrationForm.get('signAs').invalid"> {{"*Please enter select your account type (student, instructor?)" | translate}} </span><br>
+						<span *ngIf="registrationForm.get('signAs').invalid">
+							{{"*Please enter select your account type (student, instructor?)" | translate}} </span><br>
 					</div>
 					<form [formGroup]="registrationForm">
 						<div class="ui search focus">
@@ -56,7 +62,7 @@
 							<label>{{"password" | translate}}</label>
 							<div class="ui left icon input swdh11 swdh19">
 								<input class="prompt srch_explore" type="password" formControlName="password" value=""
-									id="id_password" >
+									id="id_password">
 							</div>
 						</div>
 
@@ -77,25 +83,29 @@
 						<div class="ui grouped fields mt-15">
 							<div class="field">
 								<label> {{"sign Up as" | translate}} </label>
-
-								<input value="1" type="radio" formControlName="signAs"
-									(click)="onSignUpAsClick($event)">
-								<label> {{"student" | translate}} </label>
-
-								<input value="2" type="radio" formControlName="signAs"
-									(click)="onSignUpAsClick($event)">
-								<label> {{"instructor" | translate}} </label>
-
+								<div class="ui radio">
+									<input value="1" type="radio" formControlName="signAs"
+										(click)="onSignUpAsClick($event)">
+									<label> {{"student" | translate}} </label>
+								</div>
+								<div class="ui radio">
+									<input value="2" type="radio" formControlName="signAs"
+										(click)="onSignUpAsClick($event)">
+									<label> {{"instructor" | translate}} </label>
+								</div>
 							</div>
 						</div>
 						<button class="login-btn" (click)="onSignUpClick($event)">{{"sign Up" | translate}}</button>
 						<ngx-loading [show]="loading"></ngx-loading>
 					</form>
-					<p class="sgntrm145">{{"By signing up, you agree to our" | translate}} <a >{{"Terms of Use" | translate}}</a>
-						{{"and" | translate}} <a >{{"Privacy Policy" | translate}}</a>.</p>
-					<p class="mb-0 mt-30">{{"Already have an account?" | translate}} <a [routerLink]="['/login']" routerLinkActive="router-link-active" >{{"Log In" | translate}}</a></p>
+					<p class="sgntrm145">{{"By signing up, you agree to our" | translate}}
+						<a>{{"Terms of Use" | translate}}</a>
+						{{"and" | translate}} <a>{{"Privacy Policy" | translate}}</a>.</p>
+					<p class="mb-0 mt-30">{{"Already have an account?" | translate}} <a [routerLink]="['/login']"
+							routerLinkActive="router-link-active">{{"Log In" | translate}}</a></p>
 				</div>
-				<div class="sign_footer"><img src="images/sign_logo.png" alt="">© 2020 <strong>{{"Cursus" | translate}}</strong>. {{"All
+				<div class="sign_footer"><img src="images/sign_logo.png" alt="">© 2020
+					<strong>{{"Cursus" | translate}}</strong>. {{"All
 					Rights Reserved" | translate}}.</div>
 			</div>
 		</div>
