--- a/src/app/pages/contact-us/contact-us.component.html
+++ b/src/app/pages/contact-us/contact-us.component.html
@@ -2,26 +2,26 @@
 <header class="lp-header">
     <nav class="navbar navbar-expand-lg">
       <div class="container">
-        <!-- Navbar brand--><a href="index.html" class="navbar-brand font-weight-bold"><img src="assets/images/logo.jpeg" alt="..." class="img-fluid"></a>
+        <!-- Navbar brand--><a  class="navbar-brand font-weight-bold"><img src="assets/images/logo.jpeg" alt="..." class="img-fluid"></a>
         <!-- Navbar toggler button-->
         <button type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler navbar-toggler-right">Menu<i class="icon ion-md-list ml-2"></i></button>
         <div id="navbarSupportedContent" class="collapse navbar-collapse">
           <ul class="navbar-nav mx-auto ml-auto">
                 <!-- Link-->
-                <li class="nav-item"> <a href="schedule.html" class="nav-link">About Us</a></li>
+                <!-- <li class="nav-item"> <a href="schedule.html" class="nav-link">About Us</a></li> -->
                 
-            <li class="nav-item dropdown"><a id="pages" href="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" class="nav-link dropdown-toggle">departments</a>
+            <!-- <li class="nav-item dropdown"><a id="pages" href="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" class="nav-link dropdown-toggle">departments</a>
               <div class="dropdown-menu">
                 <a href="#" class="dropdown-item">Arabic</a>
                 <a href="#" class="dropdown-item">English</a>
                 <a href="#" class="dropdown-item">Math</a></div>
-            </li>
+            </li> -->
             <!-- Link-->
-            <li class="nav-item"> <a href="#" class="nav-link">Contact Us</a></li>
+            <li class="nav-item"> <a [routerLink]="['']" routerLinkActive="router-link-active"  class="nav-link">Home</a></li>
           </ul>
           <ul class="navbar-nav">
-            <li class="nav-item"><a href="#" data-toggle="modal" data-target="#login" class="nav-link font-weight-bold mr-3">Login</a></li>
-            <li class="nav-item"><a href="#" class="navbar-btn btn btn-primary">Get Started</a></li>
+            <li class="nav-item"><a  data-toggle="modal" data-target="#login" class="nav-link font-weight-bold mr-3">Login</a></li>
+            <li class="nav-item"><a  class="navbar-btn btn btn-primary">Get Started</a></li>
           </ul>
         </div>
       </div>
@@ -43,7 +43,7 @@
                             <div class="ttl121">
                                 <nav aria-label="breadcrumb">
                                     <ol class="breadcrumb">
-                                        <li class="breadcrumb-item"><a href="index.html">{{'Home' | translate}}</a></li>
+                                        <li class="breadcrumb-item"><a >{{'Home' | translate}}</a></li>
                                         <li class="breadcrumb-item active" aria-current="page">{{'Contact Us' | translate}}</li>
                                     </ol>
                                 </nav>
@@ -77,10 +77,10 @@
                     </ul>
                     <!-- <div class="edututs_links_social">
                         <ul class="tutor_social_links">
-                            <li><a href="#" class="fb"><i class="uil uil-facebook-f"></i></a></li>
-                            <li><a href="#" class="tw"><i class="uil uil-twitter"></i></a></li>
-                            <li><a href="#" class="ln"><i class="uil uil-linkedin"></i></a></li>
-                            <li><a href="#" class="yu"><i class="uil uil-youtube"></i></a></li>
+                            <li><a  class="fb"><i class="uil uil-facebook-f"></i></a></li>
+                            <li><a  class="tw"><i class="uil uil-twitter"></i></a></li>
+                            <li><a  class="ln"><i class="uil uil-linkedin"></i></a></li>
+                            <li><a  class="yu"><i class="uil uil-youtube"></i></a></li>
                         </ul>
                     </div> -->
                 </div>												
@@ -94,9 +94,9 @@
         <div class="row">					
             <div class="col-lg-12">
                 <div class="item_f1">
-                    <a href="terms_of_use.html">Copyright Policy</a>
-                    <a href="terms_of_use.html">Terms</a>
-                    <a href="terms_of_use.html">Privacy Policy</a>
+                    <a >Copyright Policy</a>
+                    <a >Terms</a>
+                    <a >Privacy Policy</a>
                 </div>
             </div>
             <div class="col-lg-12">
@@ -112,11 +112,11 @@
                         </div>
                         <div class="col-md-6">
                             <div class="edu_social_links">
-                                <a href="#"><i class="uil uil-facebook-f"></i></a>
-                                <a href="#"><i class="uil uil-twitter"></i></a>
-                                <a href="#"><i class="uil uil-linkedin"></i></a>
-                                <a href="#"><i class="uil uil-instagram"></i></a>
-                                <a href="#"><i class="uil uil-youtube"></i></a>
+                                <a><i class="uil uil-facebook-f"></i></a>
+                                <a><i class="uil uil-twitter"></i></a>
+                                <a><i class="uil uil-linkedin"></i></a>
+                                <a><i class="uil uil-instagram"></i></a>
+                                <a><i class="uil uil-youtube"></i></a>
                             </div>
                         </div>
                     </div>
