ui footer update

--- a/src/app/pages/instructor/components/footer/footer.component.html
+++ b/src/app/pages/instructor/components/footer/footer.component.html
@@ -1,4 +1,4 @@
-<div class="wrapper">
+<!-- <div class="wrapper"> -->
     <footer class="footer mt-40">
         <div class="container-fluid">
             <div class="row">
@@ -37,4 +37,4 @@
             </div>
         </div>
     </footer>
-</div>
+<!-- </div> -->
