--- a/src/app/pages/instructor/create-course/create-course.component.html
+++ b/src/app/pages/instructor/create-course/create-course.component.html
@@ -1,4 +1,4 @@
-<div class="wrapper">
+<!-- <div class="wrapper"> -->
     <div class="container">
 
         <div class="row">
@@ -214,7 +214,7 @@
 
     </div>
 
-</div>
+<!-- </div> -->
 	
 <ng-template #customLoadingTemplate>
 	<div class="uploadingTemplate">
