--- a/src/app/pages/instructor/instructor-add-chapter/instructor-add-chapter.component.html
+++ b/src/app/pages/instructor/instructor-add-chapter/instructor-add-chapter.component.html
@@ -1,4 +1,4 @@
-<div class="wrapper">
+<!-- <div class="wrapper"> -->
     <div class="container">
         <div class="row">
             <div class="col-lg-12">	
@@ -153,4 +153,4 @@
             </div>
         </div>
     </div>
-</div>
+<!-- </div> -->
