--- a/src/app/pages/instructor/instructor-add-lecture/instructor-add-lecture.component.html
+++ b/src/app/pages/instructor/instructor-add-lecture/instructor-add-lecture.component.html
@@ -1,4 +1,4 @@
-<div class="wrapper">
+<!-- <div class="wrapper"> -->
     <div class="container">
         <div class="row">
             <div class="col-lg-12">
@@ -190,7 +190,7 @@
                                 </form>
                             </div>
                         </div>
-                    </div>
+                    <!-- </div> -->
                     <video #video style="display: none;" *ngIf="videoUrl" width="320" height="240" controls
                         [attr.src]="videoUrl" (loadedmetadata)="getDuration($event)">
                     </video>
