--- a/src/app/pages/instructor/instructor-courses/instructor-courses.component.html
+++ b/src/app/pages/instructor/instructor-courses/instructor-courses.component.html
@@ -1,5 +1,5 @@
 	<!-- Body Start -->
-	<div class="wrapper">
+	<!-- <div class="wrapper"> -->
 		<div class="sa4d25">
 			<div class="container-fluid">			
 				<div class="row">
@@ -61,7 +61,7 @@
 	
 		
 		
-	</div>
+	<!-- </div> -->
 	<!-- Body End -->
 
 
