--- a/src/app/pages/instructor/instructor-dashboard/instructor-dashboard.component.html
+++ b/src/app/pages/instructor/instructor-dashboard/instructor-dashboard.component.html
@@ -1,5 +1,5 @@
 	<!-- Body Start -->
-	<div class="wrapper">
+	<!-- <div class="wrapper"> -->
 		<div class="sa4d25">
 			<div class="container-fluid">			
 				<div class="row">
@@ -72,5 +72,5 @@
 			</div>
 		</div>
 		
-	</div>
+	<!-- </div> -->
 	<!-- Body End -->
