--- a/src/app/pages/instructor/view-course/view-course.component.html
+++ b/src/app/pages/instructor/view-course/view-course.component.html
@@ -1,5 +1,5 @@
 <!-- Video Model Start -->
-<div class="wrapper">
+<!-- <div class="wrapper"> -->
 
     <div class="modal vd_mdl fade" id="videoModal" tabindex="-1" role="dialog" aria-hidden="true">
         <div class="modal-dialog modal-lg" role="document">
@@ -178,7 +178,7 @@
             </div>
         </div>
     </div>
-</div>
+<!-- </div> -->
 
 
 <!-- </div> -->
