--- a/src/app/pages/contact-us/contact-us.component.html
+++ b/src/app/pages/contact-us/contact-us.component.html
@@ -17,11 +17,11 @@
                 <a href="#" class="dropdown-item">Math</a></div>
             </li> -->
             <!-- Link-->
-            <li class="nav-item"> <a [routerLink]="['']" routerLinkActive="router-link-active"  class="nav-link">Home</a></li>
+            <!-- <li class="nav-item"> <a [routerLink]="['']" routerLinkActive="router-link-active"  class="nav-link">{{"Home" | translate}}</a></li> -->
           </ul>
           <ul class="navbar-nav">
-            <li class="nav-item"><a  data-toggle="modal" data-target="#login" class="nav-link font-weight-bold mr-3">Login</a></li>
-            <li class="nav-item"><a  class="navbar-btn btn btn-primary">Get Started</a></li>
+            <li [routerLink]="['/login']" routerLinkActive="router-link-active"  class="nav-item"><a  data-toggle="modal" data-target="#login" class="nav-link font-weight-bold mr-3">{{"Login" | translate}}</a></li>
+            <li [routerLink]="['/signup']" routerLinkActive="router-link-active"  class="nav-item"><a  class="navbar-btn btn btn-primary">{{"Get Started" | translate}}</a></li>
           </ul>
         </div>
       </div>
@@ -43,7 +43,7 @@
                             <div class="ttl121">
                                 <nav aria-label="breadcrumb">
                                     <ol class="breadcrumb">
-                                        <li class="breadcrumb-item"><a >{{'Home' | translate}}</a></li>
+                                        <li [routerLink]="['']" routerLinkActive="router-link-active"  class="breadcrumb-item"><a >{{'Home' | translate}}</a></li>
                                         <li class="breadcrumb-item active" aria-current="page">{{'Contact Us' | translate}}</li>
                                     </ol>
                                 </nav>
