--- a/src/app/pages/user/user-all-courses/user-all-courses.component.html
+++ b/src/app/pages/user/user-all-courses/user-all-courses.component.html
@@ -11,11 +11,11 @@
 
 
 
-                <div *ngFor="let course of approvedCoursesArray"  class="col-xl-3 col-lg-6 col-md-6">
+                <div *ngFor="let course of approvedCoursesArray" class="col-xl-3 col-lg-6 col-md-6">
                     <div class="fcrse_1 mb-20">
                         <a [routerLink]="['/user/viewCourse/',course.id]" routerLinkActive="router-link-active"
                             class="fcrse_img">
-                            <img src="assets/images/courses/img-14.jpg" alt="">
+                            <img src="{{ course.cover_image_path || 'assets/images/courses/img-14.jpg'}}" alt="">
                             <div class="course-overlay">
                                 <span class="play_btn1"><i class="uil uil-play"></i></span>
                                 <!-- <div class="crse_timer">
@@ -24,12 +24,12 @@
                             </div>
                         </a>
                         <div class="fcrse_content">
-                            <a  class="crse14s">{{course.course_title}}
+                            <a class="crse14s">{{course.course_title}}
                             </a>
                             <a class="crse-cate" *ngIf="course.language === '1'">Arabic</a>
                             <a class="crse-cate" *ngIf="course.language === '2'">English</a>
                             <div class="auth1lnkprce">
-                                <p class="cr1fot">{{ 'By' | translate}} <a >{{course.first_name}}</a></p>
+                                <p class="cr1fot">{{ 'By' | translate}} <a>{{course.first_name}}</a></p>
                                 <!-- <div class="prce142">$4</div> -->
                             </div>
                         </div>
