--- a/src/app/pages/user/user-dashboard/user-dashboard.component.html
+++ b/src/app/pages/user/user-dashboard/user-dashboard.component.html
@@ -38,7 +38,7 @@
                     <div class="fcrse_1 mb-20">
                         <a [routerLink]="['/user/viewCourse/',course.id]" routerLinkActive="router-link-active"
                             class="fcrse_img">
-                            <img src="assets/images/courses/img-14.jpg" alt="">
+                            <img src="{{ course.cover_image_path || 'assets/images/courses/img-14.jpg'}}"alt="">
                             <div class="course-overlay">
                                 <span class="play_btn1"><i class="uil uil-play"></i></span>
                                 <!-- <div class="crse_timer">
