--- a/src/app/pages/admin/components/admin-sidebar/admin-sidebar.component.html
+++ b/src/app/pages/admin/components/admin-sidebar/admin-sidebar.component.html
@@ -149,7 +149,7 @@
                 <li class="menu--item">
                     <a [routerLink]="['instructors']" routerLinkActive="active"  class="menu--link " title="Instructors Request List">
                         <i class="uil uil-user-check menu--icon"></i>
-                        <span class="menu--label">I{{"nstructors Request List" | translate}}</span>
+                        <span class="menu--label">{{"Instructors Request List" | translate}}</span>
                     </a>
                 </li>
                 <li class="menu--item">
