--- a/src/app/pages/landing/landing.component.html
+++ b/src/app/pages/landing/landing.component.html
@@ -74,12 +74,12 @@
             <p class="lead mt-5 font-weight-light">{{"Match your goals to our classes, explore your options, and map out
               your path to success." | translate}}</p>
             <!-- Subscription form-->
-            <form action="#" class="subscription-form mt-5">
+            <!-- <form action="#" class="subscription-form mt-5">
               <div class="form-group">
                 <input type="search" name="seaech" placeholder="what do you want to learn?" class="form-control">
                 <button type="submit" class="btn btn-primary">{{"Search" | translate}}</button>
               </div>
-            </form>
+            </form> -->
           </div>
           <div class="col-lg-6 d-none d-lg-block">
             <div class="wrapper mx-auto">
