--- a/src/app/pages/signup/signup.component.html
+++ b/src/app/pages/signup/signup.component.html
@@ -34,14 +34,14 @@
 							<label>{{"first Name" | translate}}</label>
 							<div class="ui left icon input swdh11 swdh19">
 								<input class="prompt srch_explore" type="text" formControlName="firstName" value=""
-									id="id_fullname" required="" maxlength="64" placeholder="example: Hossam">
+									id="id_fullname" required="" maxlength="64" placeholder="{{'example: Hossam' | translate}}">
 							</div>
 						</div>
 						<div class="ui search focus mt-15">
 							<label>{{"last Name" | translate}}</label>
 							<div class="ui left icon input swdh11 swdh19">
 								<input class="prompt srch_explore" type="text" formControlName="lastName" value=""
-									id="id_fullname" required="" maxlength="64" placeholder="example: Elkashef">
+									id="id_fullname" required="" maxlength="64" placeholder="{{'example: Elkashef' | translate}}">
 							</div>
 						</div>
 						<div class="ui search focus mt-15">
@@ -105,7 +105,7 @@
 							routerLinkActive="router-link-active">{{"Log In" | translate}}</a></p>
 				</div>
 				<div class="sign_footer"><img src="images/sign_logo.png" alt="">© 2020
-					<strong>{{"Cursus" | translate}}</strong>. {{"All
+					<strong>{{"Smart Academy" | translate}}</strong>. {{"All
 					Rights Reserved" | translate}}.</div>
 			</div>
 		</div>
