--- a/src/app/pages/instructor/instructor-add-chapter/instructor-add-chapter.component.html
+++ b/src/app/pages/instructor/instructor-add-chapter/instructor-add-chapter.component.html
@@ -39,7 +39,7 @@
                                                 <label>{{"Chapter Title*" | translate}}</label>
                                                 <div class="ui left icon input swdh19">
                                                     <input formControlName="chapterTitle" class="prompt srch_explore"
-                                                        type="text" placeholder="Insert your Chapter title."
+                                                        type="text" placeholder="{{'Insert your Chapter title.' | translate}}"
                                                         name="title" data-purpose="edit-course-title" maxlength="120"
                                                         id="lecture[title]" value="">
                                                     <div class="badge_num2">
@@ -66,7 +66,7 @@
                                                             <div class="field">
                                                                 <textarea maxlength="500" formControlName="description" rows="5"
                                                                     name="description" id="id_part_description"
-                                                                    placeholder="Insert your course part description"></textarea>
+                                                                    placeholder="{{'Insert your course part description' | translate}}"></textarea>
                                                             </div>
                                                         </div>
                                                     </div>
