--- a/src/app/pages/instructor/instructor-add-lecture/instructor-add-lecture.component.html
+++ b/src/app/pages/instructor/instructor-add-lecture/instructor-add-lecture.component.html
@@ -2,7 +2,7 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-12">
-                <h2 class="st_title"><i class="uil uil-file-plus-alt"></i> Add New Lecture</h2>
+                <h2 class="st_title"><i class="uil uil-file-plus-alt"></i> {{'Add New Lecture' | translate}}</h2>
             </div>
         </div>
         <div class="row">
@@ -34,7 +34,7 @@
                                                 <label>{{"Lecture Title*" | translate}}</label>
                                                 <div class="ui left icon input swdh19">
                                                     <input formControlName="lectureTitle" class="prompt srch_explore"
-                                                        type="text" placeholder="Insert your lecture title."
+                                                        type="text" placeholder="{{'Insert your lecture title.' | translate}}"
                                                         name="title" data-purpose="edit-course-title" maxlength="120"
                                                         id="lecture[title]" value="">
                                                     <div class="badge_num2">
@@ -76,7 +76,7 @@
                                                             <div class="field">
                                                                 <textarea maxlength="500" formControlName="description" rows="5"
                                                                     name="description" id="id_part_description"
-                                                                    placeholder="Insert description"></textarea>
+                                                                    placeholder="{{'Insert description' | translate}}"></textarea>
                                                             </div>
                                                         </div>
                                                     </div>
@@ -119,7 +119,7 @@
                                         </div>
                                         <div class="col-lg-4 col-md-12">
                                             <button (click)="onSaveClick()" class="part_btn_save prt-sv" type="submit">
-                                                {{editMode ? 'Save Lecture' : 'Create Lecture'}}</button>
+                                                {{editMode ? ('Save Lecture' | translate) : ('Create Lecture' | translate) }}</button>
                                             <button *ngIf="editMode" (click)="onCancelEditChapterClick()"
                                                 class="part_btn_save prt-sv">
                                                 {{"cancel edit" | translate}}</button>
