--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -17,14 +17,14 @@
 						<div class="ui search focus mt-15">
 							<div class="ui left icon input swdh95">
 								<input #userName class="prompt srch_explore" type="text" name="emailaddress" value=""
-									id="id_email" required="" maxlength="64" placeholder="Email or phone">
+									id="id_email" required="" maxlength="64" placeholder="{{'Email or phone' | translate}}">
 								<i class="uil uil-envelope icon icon2"></i>
 							</div>
 						</div>
 						<div class="ui search focus mt-15">
 							<div class="ui left icon input swdh95">
 								<input #password class="prompt srch_explore" type="password" name="password" value=""
-									id="id_password" required="" maxlength="64" placeholder="Password">
+									id="id_password" required="" maxlength="64" placeholder="{{'Password' | translate}}">
 								<i class="uil uil-key-skeleton-alt icon icon2"></i>
 							</div>
 
