--- a/src/app/pages/user/my-courses/my-courses.component.html
+++ b/src/app/pages/user/my-courses/my-courses.component.html
@@ -11,10 +11,9 @@
 
 
 
-                <div *ngFor="let course of approvedCoursesArray"  class="col-xl-3 col-lg-6 col-md-6">
+                <div *ngFor="let course of approvedCoursesArray" [routerLink]="['/user/study',course.course_id]" class="col-xl-3 col-lg-6 col-md-6">
                     <div class="fcrse_1 mb-20">
-                        <a [routerLink]="['/user/study',course.course_id]" routerLinkActive="router-link-active"
-                            class="fcrse_img">
+                        <a  class="fcrse_img">
                             <img src="{{ course.cover_image_path || 'assets/images/courses/img-14.jpg'}}" alt="">
                             <div class="course-overlay">
                                 <span class="play_btn1"><i class="uil uil-play"></i></span>
